Add style to the page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <main>
             <div id="case" class="case">
-                <div id="display" class="display"></div>
-                <div id="buttons" class="buttons">
-                    <div id="numbers" class="buttons">
+                <div id="display" class="display">this is the display</div>
+                <div id="pad" class="pad">
+                    <div id="numbers" class="numbers">
                         <div data-type="9" class="buttons">9</div>
                         <div data-type="8" class="buttons">8</div>
                         <div data-type="7" class="buttons">7</div>
@@ -22,7 +22,7 @@
                         <div data-type="1" class="buttons">1</div>
                         <div data-type="0" class="buttons">0</div>
                     </div>
-                    <div id="operators" class="buttons">
+                    <div id="symbols" class="numbers">
                         <div data-type="+" class="buttons">+</div>
                         <div data-type="-" class="buttons">-</div>
                         <div data-type="*" class="buttons">*</div>
