Work only with the first two numbers typed in

--- a/index.html
+++ b/index.html
@@ -8,30 +8,36 @@
     <body>
         <main>
             <div id="case" class="case">
-                <div id="display" class="display">this is the display</div>
+                <div id="display" class="display"></div>
                 <div id="pad" class="pad">
                     <div id="numbers" class="numbers">
-                        <div data-type="9" class="buttons">9</div>
-                        <div data-type="8" class="buttons">8</div>
-                        <div data-type="7" class="buttons">7</div>
-                        <div data-type="6" class="buttons">6</div>
-                        <div data-type="5" class="buttons">5</div>
-                        <div data-type="4" class="buttons">4</div>
-                        <div data-type="3" class="buttons">3</div>
-                        <div data-type="2" class="buttons">2</div>
-                        <div data-type="1" class="buttons">1</div>
-                        <div data-type="0" class="buttons">0</div>
+                        <div data-type="%" class="buttons symbol">%</div>
+                        <div data-type="CE" class="buttons">CE</div>
+                        <div data-type="C" class="buttons">C</div>
+                        <div data-type="7" class="buttons number">7</div>
+                        <div data-type="8" class="buttons number">8</div>
+                        <div data-type="9" class="buttons number">9</div>
+                        <div data-type="4" class="buttons number">4</div>
+                        <div data-type="5" class="buttons number">5</div>
+                        <div data-type="6" class="buttons number">6</div>
+                        <div data-type="1" class="buttons number">1</div>
+                        <div data-type="2" class="buttons number">2</div>
+                        <div data-type="3" class="buttons number">3</div>
+                        <div data-type="!" class="buttons">+/-</div>
+                        <div data-type="0" class="buttons number">0</div>
+                        <div data-type="." class="buttons number">.</div>
                     </div>
-                    <div id="symbols" class="numbers">
-                        <div data-type="+" class="buttons">+</div>
-                        <div data-type="-" class="buttons">-</div>
-                        <div data-type="*" class="buttons">*</div>
-                        <div data-type="/" class="buttons">/</div>
-                        <div data-type="=" class="buttons">=</div>
+                    <div id="symbols" class="symbols">
+                        <div data-type="+" class="buttons symbol">+</div>
+                        <div data-type="-" class="buttons symbol">-</div>
+                        <div data-type="*" class="buttons symbol">*</div>
+                        <div data-type="/" class="buttons symbol">/</div>
+                        <div data-type="=" class="buttons symbol">=</div>
 
                     </div>
                 </div>
             </div>
         </main>
     </body>
+    <script src="script.js"></script>
 </html>
