Add function to the keys and style its appeareance

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Basic Calculator</title>
+        <title>Kalk u later</title>
         <link href="reset.css" rel="stylesheet" type="text/css">
         <link href="main.css" rel="stylesheet" type="text/css">
     </head>
@@ -11,9 +11,9 @@
                 <div id="display" class="display"></div>
                 <div id="pad" class="pad">
                     <div id="numbers" class="numbers">
-                        <div data-type="%" class="buttons symbol">%</div>
-                        <div data-type="CE" class="buttons">CE</div>
-                        <div data-type="C" class="buttons">C</div>
+                        <div data-type="CE" class="buttons clear diffColor">CE</div>
+                        <div data-type="C" class="buttons clear diffColor">C</div>
+                        <div data-type="%" class="buttons symbol diffColor">%</div>
                         <div data-type="7" class="buttons number">7</div>
                         <div data-type="8" class="buttons number">8</div>
                         <div data-type="9" class="buttons number">9</div>
@@ -25,14 +25,14 @@
                         <div data-type="3" class="buttons number">3</div>
                         <div data-type="!" class="buttons">+/-</div>
                         <div data-type="0" class="buttons number">0</div>
-                        <div data-type="." class="buttons number">.</div>
+                        <div data-type="." class="buttons">.</div>
                     </div>
                     <div id="symbols" class="symbols">
-                        <div data-type="+" class="buttons symbol">+</div>
-                        <div data-type="-" class="buttons symbol">-</div>
-                        <div data-type="*" class="buttons symbol">*</div>
-                        <div data-type="/" class="buttons symbol">/</div>
-                        <div data-type="=" class="buttons symbol">=</div>
+                        <div data-type="+" class="buttons symbol diffColor">+</div>
+                        <div data-type="-" class="buttons symbol diffColor">-</div>
+                        <div data-type="*" class="buttons symbol diffColor">*</div>
+                        <div data-type="/" class="buttons symbol diffColor">/</div>
+                        <div data-type="=" class="buttons symbol diffColor">=</div>
 
                     </div>
                 </div>
