--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
                 <div id="display" class="display"></div>
                 <div id="pad" class="pad">
                     <div id="numbers" class="numbers">
-                        <div data-type="CE" class="buttons clear diffColor">CE</div>
-                        <div data-type="C" class="buttons clear diffColor">C</div>
-                        <div data-type="%" class="buttons symbol diffColor">%</div>
-                        <div data-type="7" class="buttons number">7</div>
-                        <div data-type="8" class="buttons number">8</div>
-                        <div data-type="9" class="buttons number">9</div>
-                        <div data-type="4" class="buttons number">4</div>
-                        <div data-type="5" class="buttons number">5</div>
-                        <div data-type="6" class="buttons number">6</div>
-                        <div data-type="1" class="buttons number">1</div>
-                        <div data-type="2" class="buttons number">2</div>
-                        <div data-type="3" class="buttons number">3</div>
+                        <div data-type="CE" data-key="46" class="buttons clear diffColor">CE</div>
+                        <div data-type="C"  data-key="8" class="buttons clear diffColor">C</div>
+                        <div data-type="%"  class="buttons symbol diffColor">%</div>
+                        <div data-type="7"  data-key="103" class="buttons number">7</div>
+                        <div data-type="8"  data-key="104" class="buttons number">8</div>
+                        <div data-type="9"  data-key="109" class="buttons number">9</div>
+                        <div data-type="4"  data-key="100" class="buttons number">4</div>
+                        <div data-type="5"  data-key="101" class="buttons number">5</div>
+                        <div data-type="6"  data-key="102" class="buttons number">6</div>
+                        <div data-type="1"  data-key="97" class="buttons number">1</div>
+                        <div data-type="2"  data-key="98" class="buttons number">2</div>
+                        <div data-type="3"  data-key="99" class="buttons number">3</div>
                         <div data-type="!" class="buttons">+/-</div>
-                        <div data-type="0" class="buttons number">0</div>
-                        <div data-type="." class="buttons">.</div>
+                        <div data-type="0"  data-key="96" class="buttons number">0</div>
+                        <div data-type="."  data-key="110" class="buttons">.</div>
                     </div>
                     <div id="symbols" class="symbols">
-                        <div data-type="+" class="buttons symbol diffColor">+</div>
-                        <div data-type="-" class="buttons symbol diffColor">-</div>
-                        <div data-type="*" class="buttons symbol diffColor">*</div>
-                        <div data-type="/" class="buttons symbol diffColor">/</div>
-                        <div data-type="=" class="buttons symbol diffColor">=</div>
+                        <div data-type="+"  data-key="107" class="buttons symbol diffColor">+</div>
+                        <div data-type="-"  data-key="109" class="buttons symbol diffColor">-</div>
+                        <div data-type="*"  data-key="106" class="buttons symbol diffColor">*</div>
+                        <div data-type="/"  data-key="111" class="buttons symbol diffColor">/</div>
+                        <div data-type="="  data-key="13" class="buttons symbol diffColor">=</div>
 
                     </div>
                 </div>
